--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
     ports:
       - 6379:6379    
     restart: unless-stopped 
+    command: redis-server --requirepass yourredispassword
     networks:
       - app-network   
   certbot:
