--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - WORDPRESS_DB_USER=$MYSQL_USER
       - WORDPRESS_DB_PASSWORD=$MYSQL_PASSWORD
       - WORDPRESS_DB_NAME=exampledb
+      - WP_CLI_ALLOW_ROOT=true
       - WORDPRESS_CONFIG_EXTRA= |
           define('WP_REDIS_HOST', cache );
           define('WP_REDIS_PORT', 6379);
