Block xmlrpc.php

--- a/nginxTemplate/afterFirstRun.conf
+++ b/nginxTemplate/afterFirstRun.conf
@@ -17,6 +17,10 @@ server {
                 root /var/www/html;
         }
 
+        location = /xmlrpc.php {
+		deny all;
+	}
+
         location / {
                 return 301 https://$host$request_uri;
         }
@@ -182,6 +186,10 @@ server {
                 expires 365d;
                 log_not_found off;
         }
+
+        location = /xmlrpc.php {
+		deny all;
+	}
 
 
 }
