ADD security headers

--- a/nginxTemplate/afterFirstRun.conf
+++ b/nginxTemplate/afterFirstRun.conf
@@ -91,12 +91,7 @@ server {
 
         #include /etc/nginx/conf.d/options-ssl-nginx.conf;
 
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src * data: 'unsafe-eval' 'unsafe-inline'" always;
-        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        
         # enable strict transport security only if you understand the implications
 
         ssl_session_cache shared:SSL:1m; # holds approx 4000 sessions
@@ -167,6 +162,8 @@ server {
                 fastcgi_cache_methods GET HEAD; # What to cache: only GET and HEAD requests (not POST)
                 fastcgi_max_temp_file_size 0;
                 add_header X-Fastcgi-Cache $upstream_cache_status; # Add header so we can see if the cache hits or misses
+                include    conf.d/helpers/security.conf;
+
 
 
         }
