--- a/nginxTemplate/firstRun.conf
+++ b/nginxTemplate/firstRun.conf
@@ -1,23 +1,4 @@
 fastcgi_cache_path /etc/nginx-cache levels=1:2 keys_zone=phpcache:100m inactive=60m;
 fastcgi_cache_key "$scheme$request_method$host$request_uri";
-server {
-        listen 80;
-        listen [::]:80;
 
-        proxy_read_timeout 700;
-        proxy_connect_timeout 700;
-        proxy_send_timeout 700;
-        proxy_max_temp_file_size 0;
-        fastcgi_read_timeout 700;
-
-        server_name example.com www.example.com;
-
-        location ~ /.well-known/acme-challenge {
-                allow all;
-                root /var/www/html;
-        }
-
-        location / {
-                return 301 http://wordpress;
-        }
-}
+include    conf.d/helpers/firsthttp.conf;
