--- a/nginx/helpers/afterfirsthttps.conf
+++ b/nginx/helpers/afterfirsthttps.conf
@@ -93,7 +93,7 @@ server {
                 fastcgi_cache_methods GET HEAD; # What to cache: only GET and HEAD requests (not POST)
                 fastcgi_max_temp_file_size 0;
                 add_header X-Fastcgi-Cache $upstream_cache_status; # Add header so we can see if the cache hits or misses
-                include    conf.d/helpers/security.conf;
+                include    conf.d/helpers/securityheaders.conf;
 
 
 
