--- a/nginx/helpers/afterfirsthttps.conf
+++ b/nginx/helpers/afterfirsthttps.conf
@@ -70,12 +70,12 @@ server {
 
         # Don't cache uris containing the following segments
         if ($request_uri ~* "/wp-admin/|/xmlrpc.php|wp-.*.php|/feed/|index.php|sitemap(_index)?.xml") {
-        set $skip_cache 1;
+        set $no_cache 1;
         }
 
         # Don't use the cache for logged in users or recent commenters
         if ($http_cookie ~* "comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in") {
-        set $skip_cache 1;
+        set $no_cache 1;
         }
 
         location ~ \.php$ {
