--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         - MYSQL_DATABASE=exampledb
     volumes:
         - dbdata:/var/lib/mysql
-        - /my/custom:/etc/mysql/conf.d 
+        - ./dbconfig:/etc/mysql/conf.d 
     command: '--default-authentication-plugin=mysql_native_password'
     networks:
         - app-network 
