--- a/nginxTemplate/afterFirstRun.conf
+++ b/nginxTemplate/afterFirstRun.conf
@@ -1,5 +1,8 @@
 fastcgi_cache_path /etc/nginx-cache levels=1:2 keys_zone=phpcache:100m inactive=60m;
 fastcgi_cache_key "$scheme$request_method$host$request_uri";
+# Limits
+limit_req_log_level    warn;
+limit_req_zone         $binary_remote_addr zone=login:10m rate=10r/m;
 
 include    conf.d/helpers/afterfirsthttp.conf;
 include    conf.d/helpers/afterfirsthttps.conf;
