--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,10 +31,10 @@ services:
       - WORDPRESS_DB_PASSWORD=$MYSQL_PASSWORD
       - WORDPRESS_DB_NAME=exampledb
       - WP_CLI_ALLOW_ROOT=true
-      - WORDPRESS_CONFIG_EXTRA= |
-          define('WP_REDIS_HOST', cache );
+      - WORDPRESS_CONFIG_EXTRA=
+          define('WP_REDIS_HOST', 'cache' );
           define('WP_REDIS_PORT', 6379);
-          define('WP_REDIS_PASSWORD', yourredispassword);
+          define('WP_REDIS_PASSWORD', 'yourredispassword');
           define('WP_MEMORY_LIMIT', '5120M');
     volumes:
       - www:/var/www/html
