ADD return 404 for xnlrpc

--- a/nginx/helpers/general.conf
+++ b/nginx/helpers/general.conf
@@ -15,4 +15,5 @@ location ~* \.(css|gif|ico|jpeg|jpg|js|png|webp|eot|ttf|woff|woff2)$ {
 }
 location = /xmlrpc.php {
     deny all;
+    return 404;
 }
