--- a/nginx/helpers/afterfirsthttps.conf
+++ b/nginx/helpers/afterfirsthttps.conf
@@ -12,7 +12,8 @@ server {
         client_max_body_size        1024M;
 
 
-        tcp_nodelay on;
+        include    conf.d/helpers/keepalive.conf;
+
         open_file_cache max=5000 inactive=20s;
         open_file_cache_valid 30s;
         open_file_cache_min_uses 2;
