--- a/dockerFiles/custom.ini
+++ b/dockerFiles/custom.ini
@@ -1,3 +1,5 @@
+expose_php = off 
+
 upload_max_filesize = 64M
 post_max_size = 300M
 max_execution_time = 700
@@ -9,3 +11,7 @@ opcache.memory_consumption=128
 opcache.revalidate_freq=0
 
 #extension=soap
+
+
+# Disallow dangerous functions
+disable_functions = phpinfo, system, mail, exec
