--- a/nginx/helpers/afterfirsthttps.conf
+++ b/nginx/helpers/afterfirsthttps.conf
@@ -8,9 +8,21 @@ server {
         proxy_send_timeout 700;
         fastcgi_read_timeout 700;
         proxy_max_temp_file_size 0;
-        client_body_buffer_size     1024M;
-        client_max_body_size        1024M;
+       
+       
 
+        ## Start: Size Limits & Buffer Overflows ##
+        client_body_buffer_size  1K;
+        client_header_buffer_size 1k;
+        client_max_body_size 1k;
+        large_client_header_buffers 2 1k;
+        ## END: Size Limits & Buffer Overflows ##
+
+        ## Start: Timeouts ##
+        client_body_timeout   10;
+        client_header_timeout 10;
+        send_timeout          10;
+        ## End: Timeouts ##
 
         include    conf.d/helpers/keepalive.conf;
 
