--- a/nginx/helpers/afterfirsthttps.conf
+++ b/nginx/helpers/afterfirsthttps.conf
@@ -116,4 +116,6 @@ server {
         
 
         include    conf.d/helpers/wordpress.conf;
+        
+        include    conf.d/helpers/wordpress.conf;
 }
