--- a/nginx/helpers/wordpress.conf
+++ b/nginx/helpers/wordpress.conf
@@ -16,6 +16,11 @@ location ~ ^/wp-content/plugins {
     deny all;
 }
 
+# WordPress: deny wp-content/debug.log (except earlier rules)
+location ~ ^/wp-content/debug.log {
+    deny all;
+}
+
 # WordPress: deny general stuff
 location ~* ^/(?:xmlrpc\.php|wp-links-opml\.php|wp-config\.php|wp-config-sample\.php|readme\.html|license\.txt)$ {
     deny all;
@@ -41,3 +46,32 @@ location = /wp-login.php {
     add_header X-Fastcgi-Cache $upstream_cache_status; # Add header so we can see if the cache hits or misses
     include    conf.d/helpers/securityheaders.conf;
 }
+
+# BEGIN iThemes Security - این خط را اصلاح و یا حذف نکنید
+# iThemes Security Config Details: 2
+	# محافظت از فایل های سیستم- امنیت > تنظیمات> ترفندهای سیستم> فایل های سیستم
+	location = /wp-admin/install.php { deny all; }
+	location = /nginx.conf { deny all; }
+	location ~ /\.htaccess$ { deny all; }
+	location ~ /readme\.html$ { deny all; }
+	location ~ /readme\.txt$ { deny all; }
+	location ~ /wp-config.php$ { deny all; }
+	location ~ ^/wp-admin/includes/ { deny all; }
+	location ~ ^/wp-includes/[^/]+\.php$ { deny all; }
+	location ~ ^/wp-includes/js/tinymce/langs/.+\.php$ { deny all; }
+	location ~ ^/wp-includes/theme-compat/ { deny all; }
+	location ~ ^.*/\.git/.*$ { deny all; }
+	location ~ ^.*/\.svn/.*$ { deny all; }
+
+	# غیر فعال کردن php در آپلودها - امنیت> تنظیمات> ترفند سیستم>php در آپلودها
+	location ~ ^/wp\-content/uploads/.*\.(?:php[1-7]?|pht|phtml?|phps)$ { deny all; }
+
+	# غیر فعال کردن php در افزونه ها - امنیت> تنظیمات> ترفند سیستم>php در افزونه ها
+	location ~ ^/wp\-content/plugins/.*\.(?:php[1-7]?|pht|phtml?|phps)$ { deny all; }
+
+	# غیر فعال کردن php در قالب ها - امنیت> تنظیمات> ترفند سیستم>php در قالب ها
+	location ~ ^/wp\-content/themes/.*\.(?:php[1-7]?|pht|phtml?|phps)$ { deny all; }
+
+	# غیر فعال کردن XML-RPC - امنیت> تنظیمات> ترفند وردپرس> XML-RPC
+	location ~ xmlrpc.php { deny all; }
+# END iThemes Security - این خط را اصلاح و یا حذف نکنید
