--- a/nginx/helpers/wordpress.conf
+++ b/nginx/helpers/wordpress.conf
@@ -12,9 +12,9 @@ location ~* ^/wp-content/uploads/.*\.(?:s?html?|php|js|swf)$ {
 location ~* ^/wp-content/plugins/wordpress-seo(?:-premium)?/css/main-sitemap\.xsl$ {}
 
 # WordPress: deny wp-content/plugins (except earlier rules)
-location ~ ^/wp-content/plugins {
-    deny all;
-}
+# location ~ ^/wp-content/plugins {
+#     deny all;
+# }
 
 # WordPress: deny wp-content/debug.log (except earlier rules)
 location ~ ^/wp-content/debug.log {
