--- a/nginx/helpers/afterfirsthttps.conf
+++ b/nginx/helpers/afterfirsthttps.conf
@@ -14,7 +14,7 @@ server {
         ## Start: Size Limits & Buffer Overflows ##
         client_body_buffer_size  1K;
         client_header_buffer_size 1k;
-        client_max_body_size 1k;
+        client_max_body_size 20m;
         large_client_header_buffers 2 1k;
         ## END: Size Limits & Buffer Overflows ##
 
