Some configuration for filemanager

--- a/nginx/helpers/afterfirsthttps.conf
+++ b/nginx/helpers/afterfirsthttps.conf
@@ -9,7 +9,7 @@ server {
         fastcgi_read_timeout 700;
         proxy_max_temp_file_size 0;
        
-       
+        include    conf.d/helpers/cloudflare.conf;
 
         ## Start: Size Limits & Buffer Overflows ##
         client_body_buffer_size  1K;
@@ -94,6 +94,7 @@ server {
         include    conf.d/helpers/general.conf;
         
 
+        include    conf.d/helpers/filemanager.conf;
         include    conf.d/helpers/wordpress.conf;
 
         location ~ \.php$ {
