Update security headers

--- a/nginx/helpers/securityheaders.conf
+++ b/nginx/helpers/securityheaders.conf
@@ -3,8 +3,8 @@ add_header X-Frame-Options "SAMEORIGIN" always;
 add_header X-XSS-Protection          "1; mode=block" always;
 add_header X-Content-Type-Options    "nosniff" always;
 add_header Referrer-Policy           "no-referrer-when-downgrade" always;
-add_header Content-Security-Policy "default-src 'self' https: data: blob:; script-src 'self' blob: 'unsafe-inline' 'unsafe-eval' ; connect-src 'self'; img-src 'self' data: secure.gravatar.com ps.w.org s.w.org; style-src 'self' 'unsafe-inline';font-src 'self' data: 'unsafe-inline';frame-ancestors 'self';" always; 
+#add_header Content-Security-Policy   "default-src 'self' http: https: data: blob: 'unsafe-inline' ; frame-ancestors 'self';" always;
+add_header Content-Security-Policy "default-src 'self' https: data: blob:; script-src 'self' blob: 'unsafe-inline' 'unsafe-eval'  https://apis.google.com https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/ ; connect-src 'self'; img-src 'self' data: secure.gravatar.com ps.w.org s.w.org; style-src 'self' 'unsafe-inline' ; style-src-elem 'self' 'unsafe-inline';font-src 'self' data: 'unsafe-inline';frame-ancestors 'self';" always; 
 add_header Permissions-Policy        "interest-cohort=()" always;
 #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-
 
