Add allow ip for install wordprss

--- a/nginx/helpers/wordpress.conf
+++ b/nginx/helpers/wordpress.conf
@@ -247,7 +247,24 @@ location = /wp-login.php {
 	# End HackRepair.com Blacklist, http://pastebin.com/u/hackrepair
 
 	# محافظت از فایل های سیستم- امنیت > تنظیمات> ترفندهای سیستم> فایل های سیستم
-	location = /wp-admin/install.php { deny all; }
+	location = /wp-admin/install.php { 
+		allow allowip1;
+    	allow allowip2;
+		deny all;
+		try_files $uri =404;
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_pass wordpress:9000;
+		fastcgi_index index.php;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+		fastcgi_cache_bypass $no_cache;
+		fastcgi_no_cache $no_cache;
+		fastcgi_cache phpcache; # The name of the cache key-zone to use
+		fastcgi_cache_valid 200 30m; # What to cache: 'Code 200' responses, for half an hour
+		fastcgi_cache_methods GET HEAD; # What to cache: only GET and HEAD requests (not POST)
+		fastcgi_max_temp_file_size 0;
+	 }
 	location = /nginx.conf { deny all; }
 	location ~ /\.htaccess$ { deny all; }
 	location ~ /readme\.html$ { deny all; }
